Archive2/d0/b2a2304579fd8b/main.cpp
#define Z(x) x ## ## 3
Z(3)